# coast-to-cup

./: .gitignore  README.md
.github/workflows/: deploy.yml  refresh-data.yml
.impeccable/: hook.cache.json
data/derived/: derived.json
docs/: SOURCES.md
docs/adr/: 0001-architecture.md  0002-burden-metric.md  0003-map-rendering.md  0004-data-sourcing.md
pipeline/: README.md  pyproject.toml
pipeline/.impeccable/: hook.cache.json
pipeline/data/raw/: base_camps.json  base_camps.provenance.json  knockout.provenance.json  knockout_matches.json  match_weather.json  match_weather.provenance.json  matches.json  schedule.provenance.json  teams.json  venues.json  venues.provenance.json
pipeline/notebooks/: validation.py
pipeline/src/coast_to_cup/: __init__.py  accuracy.py  build.py  burden.py  circadian.py  config.py  domain.py  fetch_base_camps.py  fetch_knockout.py  fetch_match_weather.py  fetch_schedule.py  fetch_venues.py  geo.py  geofetch.py  reference.py  wiki.py
pipeline/tests/: test_accuracy.py  test_burden.py  test_circadian.py  test_data.py  test_geo.py  test_knockout.py
tui/: README.md  go.mod
tui/cmd/tui/: main.go
tui/internal/data/: data.go
tui/internal/ui/: styles.go  ui.go  ui_test.go
web/: README.md  index.html  package.json  pnpm-lock.yaml
web/.impeccable/: hook.cache.json
web/public/data/: derived.json
web/src/: App.tsx  index.css  main.tsx  store.ts  types.ts
web/src/components/: AboutPage.tsx  AccuracyPanel.tsx  BracketBox.tsx  CountUp.tsx  GroupFilter.tsx  HexRadar.tsx  LanguageSelector.tsx  Leaderboard.tsx  MapPanel.tsx  (+6 more)
(+32 files in other folders)
