[project]
name = "coast-to-cup"
version = "0.1.0"
description = "2026 World Cup travel-burden model and dataset build"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
# marimo: reactive .py notebooks (git-friendly, no stale state, app/WASM export)
notebook = ["marimo", "matplotlib", "numpy", "pandas"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coast_to_cup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
